Use sticky footer to (hopefully) fix positioning on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,7 @@
 html {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden; /* No duplicate scrollbar */
     width: 100%;
     height: 100%;
 }
@@ -17,9 +20,9 @@ p {
 }
 
 footer {
-    position: fixed;
-    width: 100%;
+    position: sticky;
     bottom: 0;
+    width: 100%;
     display: flex;
     padding: 0.5em;
     flex-direction: column;
